[tool.poetry]
name = "hood"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
django-environ = "^0.10.0"
psycopg2-binary = "^2.9.6"
celery = {extras = ["redis"], version = "^5.2.7"}
djangorestframework = "^3.14.0"
django-filter = "^23.1"
gunicorn = "^20.1.0"
drf-yasg = "^1.21.5"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"
pytest-django = "^4.5.2"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
